--- a/Razor Final Project Code Academy/Views/Account/AccountDetails.cshtml
+++ b/Razor Final Project Code Academy/Views/Account/AccountDetails.cshtml
@@ -17,7 +17,7 @@
                 </ul>
 
                 <div class="content">
-                    <form action="">
+                    <form asp-controller="Account" asp-action="AccountDetails">
                         <div class="row">
                             <div class="name col-lg-6 col-12">
                                 <label asp-for="UserName" >User Name:</label><br>
