--- a/Razor Final Project Code Academy/Views/Shop/DetailAccessory.cshtml
+++ b/Razor Final Project Code Academy/Views/Shop/DetailAccessory.cshtml
@@ -3,6 +3,7 @@
 @{
     List<Accessory> accessories = ViewBag.Accessory;
     List<Product> products = ViewBag.Product;
+    List<Wishlist> wishlist = ViewBag.WishList;
 }
 <section id="detail">
     <div class="container">
@@ -200,17 +201,42 @@
                                         </div>
 
                                         <div class="panelWish">
-                                            <div class="addToWishlist">
-                                                <a asp-controller="Shop" asp-action="AddWishListAcc" asp-route-Id="@Model.Id">
-                                                    <p>Add To My Wish List</p>
-                                                </a>
-                                            </div>
-                                            <div class="deleteFromWishlist">
-                                                <a href="">
-                                                    <p>Remove From Wish List</p>
-                                                </a>
-                                            </div>
+                                            @if (User.Identity.IsAuthenticated)
+                                            {
+                                                if (wishlist != null && wishlist.Any())
+                                                {
+                                                    bool isItemInWishlist = wishlist.Any(item => item.AccessoryId == Model.Id);
+
+                                                    if (isItemInWishlist)
+                                                    {
+                                                        <div class="deleteFromWishlist">
+                                                            <a asp-controller="Wishlist" asp-action="RemoveWishListAcc" asp-route-Id="@Model.Id">
+                                                                <p>Remove From Wish List</p>
+                                                            </a>
+                                                        </div>
+                                                    }
+                                                    else
+                                                    {
+                                                        <div class="addToWishlist">
+                                                            <a asp-controller="Wishlist" asp-action="AddWishListAcc" asp-route-Id="@Model.Id">
+                                                                <p>Add To My Wish List</p>
+                                                            </a>
+                                                        </div>
+                                                    }
+                                                }
+                                                else
+                                                {
+                                                    <div class="addToWishlist">
+                                                        <a asp-controller="Wishlist" asp-action="AddWishListAcc" asp-route-Id="@Model.Id">
+                                                            <p>Add To My Wish List</p>
+                                                        </a>
+                                                    </div>
+                                                }
+                                            }
+
                                         </div>
+
+
                                     </div>
                                 </div>
                             </form>
