--- a/Razor Final Project Code Academy/Views/Shop/DetailAccessory.cshtml
+++ b/Razor Final Project Code Academy/Views/Shop/DetailAccessory.cshtml
@@ -493,6 +493,11 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="up">
+            <i class="fa-solid fa-chevron-up"></i>
+        </div>
+    </div>
 </section>
 
 @section Script{
