--- a/Razor Final Project Code Academy/Views/Home/Index.cshtml
+++ b/Razor Final Project Code Academy/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
 
     List < Accessory > newAccessory = ViewBag.NewWatch;
 
+    List<Comment> comments =  ViewBag.Comments;
 
 }
 <main>
@@ -253,48 +254,26 @@
                         </div>
 
                         <div class="review">
-                            <div class="reviews">
-                                <div class="text-image">
-                                    <div class="image">
-                                        <img src="~/assets/images/More/quocte.png" alt="">
+                            @foreach (var item in comments)
+                            {
+                                <div class="reviews">
+                                    <div class="text-image" style=" height: 388px">
+                                        <div class="image">
+                                            <img style=" margin-bottom: 40px;" src="~/assets/images/More/quocte.png" alt="">
+                                        </div>
+                                        <div class="text">
+                                            <p style="text-align: center;">
+                                                “@item.Text”
+                                            </p>
+                                        </div>
                                     </div>
-                                    <div class="text">
-                                        <p>
-                                            “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-                                            consequat
-                                            orci sed nibh ultricies, eget sollicitudin quam consectetur. Donec at
-                                            mattis
-                                            purus, ut accumsan nisl. Lorem ipsum dolor sit amet”
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="about">
-                                    <div class="name">
-                                        <span>Sharon Stone</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="reviews">
-                                <div class="text-image">
-                                    <div class="image">
-                                        <img src="~/assets/images/More/quocte.png" alt="">
-                                    </div>
-                                    <div class="text">
-                                        <p>
-                                            “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-                                            consequat
-                                            orci sed nibh ultricies, eget sollicitudin quam consectetur. Donec at
-                                            mattis
-                                            purus, ut accumsan nisl. Lorem ipsum dolor sit amet”
-                                        </p>
+                                    <div class="about">
+                                        <div class="name">
+                                            <span>@item.Name</span>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="about">
-                                    <div class="name">
-                                        <span>Sharon Stone</span>
-                                    </div>
-                                </div>
-                            </div>
+                            }
                         </div>
 
                     </div>
@@ -344,7 +323,7 @@
                                                         </p>
                                                     </div>
                                                     <div class="addToCard">
-                                                        <a href="">
+                                                        <a asp-controller="Basket" asp-action="Addbaskets" asp-route-productId="@item.accessoryColors">
                                                             Add To Card
                                                         </a>
                                                     </div>
@@ -385,7 +364,7 @@
                                                         </p>
                                                     </div>
                                                     <div class="addToCard">
-                                                        <a asp-controller="Basket" asp-action="Addbaskets" asp-route-productId="@item.Id">
+                                                        <a >
                                                             Add To Card
                                                         </a>
                                                     </div>
@@ -418,7 +397,8 @@
                             <div class="products">
 
                                 @foreach (var item in phones)
-                                {
+                                    {
+                                        
                                     <ul>
                                         <li>
                                             <div class="image">
@@ -458,7 +438,7 @@
                                                 }
 
                                                 <div class="addToCard">
-                                                    <a href="">
+                                                    <a>
                                                         Add To Card
                                                     </a>
                                                 </div>
