--- a/Razor Final Project Code Academy/Views/Home/Index.cshtml
+++ b/Razor Final Project Code Academy/Views/Home/Index.cshtml
@@ -322,11 +322,6 @@
                                                             @item.Descr
                                                         </p>
                                                     </div>
-                                                    <div class="addToCard">
-                                                        <a asp-controller="Basket" asp-action="Addbaskets" asp-route-productId="@item.accessoryColors">
-                                                            Add To Card
-                                                        </a>
-                                                    </div>
                                                 </div>
                                             </li>
                                         </ul>
@@ -363,11 +358,6 @@
                                                             @item.Descr
                                                         </p>
                                                     </div>
-                                                    <div class="addToCard">
-                                                        <a >
-                                                            Add To Card
-                                                        </a>
-                                                    </div>
                                                 </div>
                                             </li>
                                         </ul>
@@ -384,9 +374,9 @@
                                         <h5>Phones</h5>
                                     </div>
                                     <ul>
-                                        <li><a href="">Accessories</a></li>
-                                        <li><a href="">TV & Video</a></li>
-                                        <li><a href="">Health & Beauty</a></li>
+                                        <li>Phones</li>
+                                        <li>Cases</li>
+                                        <li>Phone Accessory</li>
                                     </ul>
                                 </div>
                                 <div class="lineOrange">
@@ -436,12 +426,6 @@
                                                         </div>
                                                     </div>
                                                 }
-
-                                                <div class="addToCard">
-                                                    <a>
-                                                        Add To Card
-                                                    </a>
-                                                </div>
                                             </div>
                                         </li>
                                     </ul>
@@ -466,9 +450,9 @@
                                         <h5>Accessory</h5>
                                     </div>
                                     <ul>
-                                        <li><a href="">Accessories</a></li>
-                                        <li><a href="">TV & Video</a></li>
-                                        <li><a href="">Health & Beauty</a></li>
+                                        <li>Watches</li>
+                                        <li>Cases</li>
+                                        <li>Accessory</li>
                                     </ul>
                                 </div>
                                 <div class="lineOrange">
@@ -517,11 +501,6 @@
                                                         </div>
                                                     </div>
                                                 }
-                                                <div class="addToCard">
-                                                    <a href="">
-                                                        Add To Card
-                                                    </a>
-                                                </div>
                                             </div>
                                         </li>
                                     </ul>
