--- a/Razor Final Project Code Academy/Views/Shop/Index.cshtml
+++ b/Razor Final Project Code Academy/Views/Shop/Index.cshtml
@@ -202,7 +202,7 @@
         <ul class="pagination mt-0">
             @for (int i = 1; i <= ViewBag.TotalPage; i++)
             {
-                <li style="margin-left:5px;" class="@(i==ViewBag.CurrentPage ? "active" : "")"><a asp-action="Index" asp-route-page="@i">@i</a></li>
+                <li style="margin-left:5px;" class="@(i==ViewBag.CurrentPage ? "active" : "")"><a style="height: 25px; color: white; background-color: orange; width: 25px; display: inline-block; text-decoration: none; text-align: center; margin-right: 5px; border-radius: 3px;" asp-action="Index" asp-route-page="@i">@i</a></li>
             }
         </ul>
     </div>
