--- a/Razor Final Project Code Academy/Views/Shared/_Layout.cshtml
+++ b/Razor Final Project Code Academy/Views/Shared/_Layout.cshtml
@@ -106,7 +106,7 @@
                     <div class="col-lg-6">
                         <div class="input">
                             <form method="post" action="#" class="searchFormMain">
-                                <input class="searchInputMain" type="search" placeholder="Search the store">
+                                <input style="padding:5px;" class="searchInputMain" type="search" placeholder="Search the store">
                                 <ul class="searchUlMain">
 
                                 </ul>
@@ -376,7 +376,7 @@
                     <div class="col-12">
                         <div class="inputDiv">
                             <form method="post" action="#" class="searchItem">
-                                <input class="searchInput" type="search" placeholder="Search the store">
+                                <input style="padding:5px;" class="searchInput" type="search" placeholder="Search the store">
                                 <ul class="searchUl">
 
                                 </ul>
