--- a/Razor Final Project Code Academy/Views/Order/Index.cshtml
+++ b/Razor Final Project Code Academy/Views/Order/Index.cshtml
@@ -59,7 +59,16 @@
                                 </div>
                             </div>
                             <div class="button">
-                                <button type="submit">
+                                <button style="text-align: center;
+                                        border-radius: 20px;
+                                        width: 170px;
+                                        height: 40px;
+                                        font-size: 14px;
+                                        border: none;
+                                        background-color: #444;
+                                        border-color: #444;
+                                        color: #fff;
+                                        transition: 0.4s;" type="submit">
                                     ORDER
                                 </button>
                             </div>
