--- a/Razor Final Project Code Academy/Views/Order/Index.cshtml
+++ b/Razor Final Project Code Academy/Views/Order/Index.cshtml
@@ -34,13 +34,25 @@
                                         <div class="row">
                                             <div class="input fullname col-lg-6">
                                                 <label asp-for="FullName">Full Name:</label><br>
-                                                <input asp-for="FullName"placeholder="FullName" required><br>
+                                                <input asp-for="FullName" placeholder="FullName" required><br>
                                                 <span asp-validation-for="FullName" class="text-danger"></span>
                                             </div>
                                             <div class="input email col-lg-6">
                                                 <label asp-for="Email">Email:</label><br>
-                                                <input asp-for="Email"placeholder="Email" required><br>
+                                                <input asp-for="Email" placeholder="Email" required><br>
                                                 <span asp-validation-for="Email" class="text-danger"></span>
+                                            </div>
+
+                                            <div class="input adress col-lg-6">
+                                                <label asp-for="Contry">Contry:</label><br>
+                                                <input asp-for="Contry" placeholder="Adress" required><br>
+                                                <span asp-validation-for="Contry" class="text-danger"></span>
+                                            </div>
+
+                                            <div class="input adress col-lg-6">
+                                                <label asp-for="City">City:</label><br>
+                                                <input asp-for="City" placeholder="Adress" required><br>
+                                                <span asp-validation-for="City" class="text-danger"></span>
                                             </div>
 
                                             <div class="input adress col-lg-6">
@@ -48,6 +60,19 @@
                                                 <input asp-for="Address" placeholder="Adress" required><br>
                                                 <span asp-validation-for="Address" class="text-danger"></span>
                                             </div>
+
+                                            <div class="input adress col-lg-6">
+                                                <label asp-for="Zip">Zip Code:</label><br>
+                                                <input asp-for="Zip" placeholder="Adress" required><br>
+                                                <span asp-validation-for="Zip" class="text-danger"></span>
+                                            </div>
+
+                                            <div class="input adress col-lg-6">
+                                                <label asp-for="Number">Phone Number:</label><br>
+                                                <input asp-for="Number" placeholder="Adress" required><br>
+                                                <span asp-validation-for="Number" class="text-danger"></span>
+                                            </div>
+
 
                                             <div class="input note col-lg-6">
                                                 <label asp-for="Note">Note:</label><br>
@@ -88,7 +113,6 @@
                                 <input type="hidden" name="BasketItems[@Model.BasketItems.IndexOf(item)].SaleQuantity" value="@item.SaleQuantity" />
                                 <input type="hidden" name="BasketItems[@Model.BasketItems.IndexOf(item)].UnitPrice" value="@item.UnitPrice" />
                                 <input type="hidden" name="BasketItems[@Model.BasketItems.IndexOf(item)].IsAccessuar" value="true" />
-
 
                             }
                         </form>
